[metadata]
name = ndim
version = 0.1.4
author = Nico Schlömer
author_email = nico.schloemer@gmail.com
description = 
url = https://github.com/nschloe/ndim
project_urls =
    Code=https://github.com/nschloe/ndim
    Issues=https://github.com/nschloe/ndim/issues
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0-or-later
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering
    Topic :: Utilities

[options]
packages = find:
install_requires =
    importlib_metadata;python_version<"3.8"
    sympy
python_requires = >=3.5
setup_requires =
    setuptools>=42
    wheel
